fixedContrast

--- a/webexam2024/style.css
+++ b/webexam2024/style.css
@@ -191,7 +191,7 @@ li a img {
     font-weight: 600;
     background-color: #fff;
     border: 2px solid #000;
-    color: #6e6e6e;
+    color: #000;
     height: 3.4em;
     padding: 20px;
 }
@@ -369,9 +369,10 @@ hr {
 .opplysningerFlexItem {
     font-size: 1.2em;
     font-weight: 600;
+    opacity: 1;
     background-color: #fff;
-    border: 2px solid #6e6e6e;
-    color: #6e6e6e;
+    border: 2px solid #000;
+    color: #000;
     height: 8em;
     text-indent: 15px;
 }
@@ -380,8 +381,8 @@ hr {
     font-size: 1.2em;
     font-weight: 600;
     background-color: #fff;
-    border: 2px solid #6e6e6e;
-    color: #6e6e6e;
+    border: 2px solid #000;
+    color: #000;
     height: 3em;
     text-indent: 15px;
 }
